--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
         <br>
         <br>
         <label for="held-runes">How many runes are you currently carrying? </label>
-        <input type="text" id="held-runes" class="user-input" oninput="totalRuneAmount()">
+        <input type="text" id="held-runes" class="user-input" value="0" oninput="totalRuneAmount()">
         <br>
         <br>
         <p id="overall-runes">Your total runes after using consumables: </p>
-        <p id="totalRunes" style="font-weight: bold;">0</p>
+        <div>
+            <p id="totalRunes" style="font-weight: bold;">0</p>
+            <img id="rune-icon">
+        </div>
         <br>
         <br>
         <p id="can-i-level">Can I level up? </p>
@@ -33,114 +36,144 @@
     <table class="styled-table">
         <thead>
             <tr>
+                <th id="icon-header"></th>
                 <th>Rune Type</th>
                 <th>How Many?</th>
                 <th>Profit After Using</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
+            <tr id="goldenRune01-row">
+                <td><img id="goldenRune01-icon" class="icon"></img></td>
                 <td><label for="goldenRune01">Golden Rune [1]</label></td>
                 <td><input type="text" id="goldenRune01" oninput="totalRuneAmount()"></td>
                 <td><p id="gr01">0</p></td>
             </tr>
-            <tr>
+            <tr id="goldenRune02-row">
+                <td><img class="icon"></img></td>
                 <td><label for="goldenRune02">Golden Rune [2]</label></td>
                 <td><input type="text" id="goldenRune02" oninput="totalRuneAmount()"></td>
                 <td><p id="gr02">0</p></td>
             </tr>
-            <tr>
+            <tr id="goldenRune03-row">
+                <td><img class="icon"></img></td>
                 <td><label for="goldenRune03">Golden Rune [3]</label></td>
                 <td><input type="text" id="goldenRune03" oninput="totalRuneAmount()"></td>
                 <td><p id="gr03">0</p></td>
             </tr>
-            <tr>
+            <tr id="goldenRune04-row">
+                <td><img class="icon"></img></td>
                 <td><label for="goldenRune04">Golden Rune [4]</label></td>
                 <td><input type="text" id="goldenRune04" oninput="totalRuneAmount()"></td>
                 <td><p id="gr04">0</p></td>
             </tr>
-            <tr>
+            <tr id="goldenRune05-row">
+                <td><img class="icon"></img></td>
                 <td><label for="goldenRune05">Golden Rune [5]</label></td>
                 <td><input type="text" id="goldenRune05" oninput="totalRuneAmount()"></td>
                 <td><p id="gr05">0</p></td>
             </tr>
-            <tr>
+            <tr id="goldenRune06-row">
+                <td><img class="icon"></img></td>
                 <td><label for="goldenRune06">Golden Rune [6]</label></td>
                 <td><input type="text" id="goldenRune06" oninput="totalRuneAmount()"></td>
                 <td><p id="gr06">0</p></td>
             </tr>
-            <tr>
+            <tr id="goldenRune07-row">
+                <td><img class="icon"></img></td>
                 <td><label for="goldenRune07">Golden Rune [7]</label></td>
                 <td><input type="text" id="goldenRune07" oninput="totalRuneAmount()"></td>
                 <td><p id="gr07">0</p></td>
             </tr>
-            <tr>
+            <tr id="goldenRune08-row">
+                <td><img class="icon"></img></td>
                 <td><label for="goldenRune08">Golden Rune [8]</label></td>
                 <td><input type="text" id="goldenRune08" oninput="totalRuneAmount()"></td>
                 <td><p id="gr08">0</p></td>
             </tr>
-            <tr>
+            <tr id="goldenRune09-row">
+                <td><img class="icon"></img></td>
                 <td><label for="goldenRune09">Golden Rune [9]</label></td>
                 <td><input type="text" id="goldenRune09" oninput="totalRuneAmount()"></td>
                 <td><p id="gr09">0</p></td>
             </tr>
-            <tr>
+            <tr id="goldenRune10-row">
+                <td><img class="icon"></img></td>
                 <td><label for="goldenRune10">Golden Rune [10]</label></td>
                 <td><input type="text" id="goldenRune10" oninput="totalRuneAmount()"></td>
                 <td><p id="gr10">0</p></td>
             </tr>
-            <tr>
+            <tr id="goldenRune11-row">
+                <td><img class="icon"></img></td>
                 <td><label for="goldenRune11">Golden Rune [11]</label></td>
                 <td><input type="text" id="goldenRune11" oninput="totalRuneAmount()"></td>
                 <td><p id="gr11">0</p></td>
             </tr>
-            <tr>
+            <tr id="goldenRune12-row">
+                <td><img class="icon"></img></td>
                 <td><label for="goldenRune12">Golden Rune [12]</label></td>
                 <td><input type="text" id="goldenRune12" oninput="totalRuneAmount()"></td>
                 <td><p id="gr12">0</p></td>
             </tr>
-            <tr>
+            <tr id="goldenRune13-row">
+                <td><img class="icon"></img></td>
                 <td><label for="goldenRune13">Golden Rune [13]</label></td>
                 <td><input type="text" id="goldenRune13" oninput="totalRuneAmount()"></td>
                 <td><p id="gr13">0</p></td>
             </tr>
-            <tr>
+            <tr id="numenRune-row">
+                <td><img class="icon"></img></td>
                 <td><label for="numenRune">Numen's Rune</label></td>
                 <td><input type="text" id="numenRune" oninput="totalRuneAmount()"></td>
                 <td><p id="nr">0</p></td>
             </tr>
-            <tr>
+            <tr id="heroRune01-row">
+                <td><img class="icon"></img></td>
                 <td><label for="heroRune01">Hero's Rune [1]</label></td>
                 <td><input type="text" id="heroRune01" oninput="totalRuneAmount()"></td>
                 <td><p id="hr01">0</p></td>
             </tr>
-            <tr>
+            <tr id="heroRune02-row">
+                <td><img class="icon"></img></td>
                 <td><label for="heroRune02">Hero's Rune [2]</label></td>
                 <td><input type="text" id="heroRune02" oninput="totalRuneAmount()"></td>
                 <td><p id="hr02">0</p></td>
             </tr>
-            <tr>
+            <tr id="heroRune03-row">
+                <td><img class="icon"></img></td>
                 <td><label for="heroRune03">Hero's Rune [3]</label></td>
                 <td><input type="text" id="heroRune03" oninput="totalRuneAmount()"></td>
                 <td><p id="hr03">0</p></td>
             </tr>
-            <tr>
+            <tr id="heroRune04-row">
+                <td><img class="icon"></img></td>
                 <td><label for="heroRune04">Hero's Rune [4]</label></td>
                 <td><input type="text" id="heroRune04" oninput="totalRuneAmount()"></td>
                 <td><p id="hr04">0</p></td>
             </tr>
-            <tr>
+            <tr id="heroRune05-row">
+                <td><img class="icon"></img></td>
                 <td><label for="heroRune05">Hero's Rune [5]</label></td>
                 <td><input type="text" id="heroRune05" oninput="totalRuneAmount()"></td>
                 <td><p id="hr05">0</p></td>
             </tr>
-            <tr>
+            <tr id="lordRune-row">
+                <td><img class="icon"></img></td>
                 <td><label for="lordRune">Lord's Rune</label></td>
                 <td><input type="text" id="lordRune" oninput="totalRuneAmount()"></td>
                 <td><p id="lr">0</p></td>
             </tr>
         </tbody>
     </table>    
-    <script src="app.js"></script>
 </body>
+
+    <script src="app.js"></script>
+
+    <script>
+        document.body.onload = () => {
+            console.log('page loaded')
+            loadIcons();
+        }
+    </script>
+
 </html>
